pathfind controller begun